1.18-5.3.26:
- TqLxQuanZ speed up world generation speed if the chunk is not a city

1.18-5.3.25:
- TqLxQuanZ fixed the scattered building can generate on air when there's a terrain correction in the current chunk
- TqLxQuanZ fixed the scattered building can generate on air when there's a terrain correction in the current chunk

1.18-5.3.24:
- TqLxQuanZ fixed the bug that some POI's lingered after explosions (like brewing stands)
- TqLxQuanZ added park elevation and park border options

1.18-5.3.23:
- Very big optimizations to Lost City generation. On average generation of a city chunk will be 2 times faster
- New 'stats' command to show average chunk generation time
- Finally fixed the POI warning that was spamming the log during chunk generation

1.18-5.3.22:
- TqLxQuanZ did various optimizations to Lost Cities worldgen and improved multibuilding handling

1.18-5.3.21:
- TqLxQuanZ fixed a problem where a building has an extreme rare chance to not generate

1.18-5.3.20:
- TqLxQuanZ changed hardAir to structure_void so that the commandblock can be used again

1.18-5.3.19:
- TqLxQuanZ fixed mincellars config is not being accounted for buildings

1.18-5.3.18:
- TqLxQuanZ fixed a problem with the asset registry cache not being cleaned if you (in single player) exit from a world and load a new one

1.18-5.3.17:
- Kasualix fixed the day/night cycle in the Lost Cities dimension
- It should now again be possible to use Lost Cities server side only

1.18-5.3.16:
- New lostcities:lights tag from TqLxQuanZ that Lost Cities will use to check if a block can emit light

1.18-5.3.15:
- Better error reporting and avoidance of crashing in case of a chunk generation error
- The createbuilding, createpart, and locatepart commands will now correctly use resource locations as arguments. They also support completion

1.18-5.3.14:
- TqLxQuanZ fixed a problem where bridges wouldn't use the computed palette